# scipyx

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  justfile  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
scipyx/: __init__.py  _krylov.py  _nonlinear.py  _optimize.py
src/scipyx/: __about__.py  __init__.py  _ellip.py  _interpolation.py  _krylov.py  _nonlinear.py  _optimize.py
test/: test_krylov.py  test_minimize.py  test_nonlinear.py  test_optimize.py
tests/: test_ellip.py  test_interpolate.py  test_optimize.py
