[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
profile = "black"

[project]
name = "scipyx"
authors = [{name = "Nico Schlömer", email = "nico.schloemer@gmail.com"}]
description = "SciPy fixes and extensions"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "numpy >= 1.20.0",
  "scipy",
]

[project.urls]
Code = "https://github.com/nschloe/scipyx"
Issues = "https://github.com/nschloe/scipyx/issues"
Funding = "https://github.com/sponsors/nschloe"
